# algo_labs

./: .gitignore  CMakeLists.txt
lab1/: Makefile  README.md  main.c  tests.c  tree.c
lab2/: Makefile  README.md  algorithms.c  generator.c  main.c  readFile.c  tests.c
lab3/: Makefile  README.md  main.c  parse.c  parse.h  stack.c  stack.h  structures.c  structures.h  tests.cpp  tree.c  tree.h
lab4/: README.md  benchmark.cpp  main.c  output.txt  report.json  tests.cpp  tree.c  tree.h
lab5/: README.md  benchmark.cpp  graph.c  graph.h  main.c  output.txt  prim.c  prim.h  report.json  tests.cpp  tree.c  tree.h
